--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito-sans": "^0.2.3",
     "expo": "~49.0.7",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
