--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.7",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
@@ -23,7 +25,7 @@
     "@types/node": "^20.5.0",
     "@types/react": "~18.0.14",
     "@types/styled-components": "^5.1.26",
-    "@types/styled-components-react-native": "^5.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "phosphor-react-native": "^1.1.2",
     "typescript": "^5.1.3"
   },
