--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.46.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.11.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
