--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "0.72.3",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.11.0",
     "styled-components": "^6.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@types/node": "^20.5.0",
     "@types/react": "~18.0.14",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.8",
     "babel-plugin-module-resolver": "^5.0.0",
     "phosphor-react-native": "^1.1.2",
     "typescript": "^5.1.3"
