--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
     "@hookform/resolvers": "^3.3.4",
-    "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -21,11 +21,11 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-hook-form": "^7.50.1",
-    "react-native": "0.72.3",
-    "react-native-get-random-values": "^1.10.0",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
-    "react-native-svg": "^13.11.0",
+    "react-native": "0.72.10",
+    "react-native-get-random-values": "~1.9.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "styled-components": "^6.0.7",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/node": "^20.5.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.8",
     "babel-plugin-module-resolver": "^5.0.0",
