--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-svg": "13.9.0",
     "styled-components": "^6.0.7",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
