--- a/package.json
+++ b/package.json
@@ -12,35 +12,35 @@
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
     "@hookform/resolvers": "^3.3.4",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "expo": "~49.0.7",
-    "expo-font": "~11.4.0",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.2",
+    "expo-font": "~12.0.5",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-hook-form": "^7.50.1",
-    "react-native": "0.72.10",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-get-random-values": "~1.9.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "styled-components": "^6.0.7",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4",
-    "react-native-reanimated": "~3.3.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "@types/node": "^20.5.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.79",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.8",
     "babel-plugin-module-resolver": "^5.0.0",
     "phosphor-react-native": "^1.1.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
